--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -18,6 +18,11 @@
       </select>
       <button type="submit" class="btn btn-primary">Add</button>
     </form>
+    <div id="task-batch-bar" class="task-batch-bar hidden">
+      <span class="task-batch-count"></span>
+      <button type="button" id="task-batch-delete" class="btn btn-small btn-danger">Delete selected</button>
+      <button type="button" id="task-batch-cancel" class="btn btn-small btn-ghost">Cancel</button>
+    </div>
     <ul id="task-list" class="task-list"></ul>
   </div>
 </section>
